[package]
name = "Blockchain-Rust"
version = "0.1.0"
edition = "2021"


[dependencies]
# the chrono crate for time handling
chrono = "0.4"
# sha2 library for our sha256 hashing
sha2 = "0.9.8"
# serde for serialization and deserialization
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
# libp2p as our peer-to-peer networking layer
libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
#  Tokio as our underlying runtime.
tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
# hex crate to transform the binary hashes into readable and transferable hex.
hex = "0.4"
# once_cell crate for lazy initialization of the blockchain
once_cell = "1.5"
# the log crate for logging
log = "0.4"
pretty_env_logger = "0.4"
